# hvcc

./: .bumpversion.cfg  .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  _config.yml  hvcc.py  requirements-test.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: build.yml  discord.yml  irc.yml  python.yml
core/hv2ir/: BufferPool.py  HIrConvolution.py  HIrInlet.py  HIrLorenz.py  HIrOutlet.py  HIrPack.py  HIrReceive.py  HIrSend.py  HIrSwitchcase.py  HIrTabhead.py  HIrTabread.py  HIrTabwrite.py  HLangAdc.py  HLangBinop.py  HLangBiquad.py  HLangDac.py  HLangDelay.py  HLangIf.py  HLangLine.py  HLangMessage.py  HLangNoise.py  HLangPhasor.py  HLangPrint.py  HLangRandom.py  HLangReceive.py  HLangSend.py  HLangSequence.py  HLangSlice.py  HLangSystem.py  HLangTable.py  HLangUnop.py  HLangVar.py  HLangVario.py  HeavyGraph.py  HeavyIrObject.py  HeavyLangObject.py  HeavyParser.py  LocalVars.py  hv2ir.py
docs/: 01.introduction.md  02.getting_started.md  03.gen.daisy.md  03.gen.dpf.md  03.gen.fabric.md  03.gen.javascript.md  03.gen.owl.md  03.gen.unity.md  03.gen.wwise.md  03.generators.md  03.uploader.md  04.midi.md  05.c.md  05.unity.md  06.cpp.md  06.wwise.md  07.heavy_lang.md  07.javascript.md  08.dpf.md  08.heavy_ir_lang.md  08.vst.md  09.midi.md  09.supported_vanilla_objects.md  10.c.md  10.unsupported_vanilla_objects.md  11.cpp.md  12.heavy_lang.md  13.heavy_ir_lang.md  14.Supported_vanilla_objects.md  14.supported_objects.md  15.Unsupported_vanilla_objects.md  _config.yml
examples/: example.pd
examples/daisy/: README.md  patch_meta.json  patch_test.pd  petal_meta.json  petal_test.pd  pod_meta.json  pod_test.pd  seed_meta.json  seed_test.pd
examples/dpf/: README.md  dpf_bend.pd  dpf_example.json  dpf_example.pd  dpf_midi_thru.json  dpf_midi_thru.pd  dpf_pgm.pd  dpf_touch.pd
generators/buildjson/: buildjson.py
hvcc/: __init__.py  utils.py
tests/: test_control.py  test_midi.cpp  test_midi.py  test_signal.py  test_speed.c  test_speed.py  test_speed_avx.py  test_unity.py  test_uploader.py
utils/: hvhash.py  hvutils.py
(+762 files in other folders)
