[metadata]
name = hvcc
version = 0.5.0
license = GPLv3
author = Enzien Audio, Wasted Audio
description = `hvcc` is a python-based dataflow audio programming language compiler that generates C/C++ code and a variety of specific framework wrappers.
url = https://github.com/Wasted-Audio/hvcc
download_url = https://github.com/Wasted-Audio/hvcc/archive/refs/tags/v0.5.0.tar.gz
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Compilers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
include_package_data = True
packages = find:
python_requires = >= 3.7
install_requires =
    Jinja2>=2.11
    importlib_resources>=5.1
    json2daisy>=0.3.13

[options.entry_points]
console_scripts =
    hvcc = hvcc:main
    hvutil = hvcc.utils:main
